created game logic

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Memory Card Game</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
+	<title>Memory Card Game</title>
 </head>
 <body>
 
@@ -38,6 +38,6 @@
 		<p class="copyright">Copyright 2017</p>
 		<p class="message">Created with &hearts; by <span class="name">GA</span></p>
 	</footer>
-	<script src="js/main.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
